# dev-flow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_execution_workflow_id_nullable.py
backend/app/: __init__.py  database.py  main.py
backend/app/core/: __init__.py  redis.py
backend/app/middleware/: demo_mode.py
backend/app/models/: __init__.py  execution.py  workflow.py
backend/app/routes/: __init__.py  execute.py  v1.py  workflows.py
backend/app/schemas/: __init__.py  execution.py  workflow.py
backend/app/services/: __init__.py  execution_service.py  workflow_service.py
backend/app/tasks/: __init__.py  workflow.py
backend/devflow_test/: exito.txt
backend/tests/: test_alembic_migration.py  test_execution_validation.py  test_placeholder.py  test_smoke.py
cli/examples/: workflow-cycle.yaml  workflow-echo.yaml  workflow-example.yaml  workflow-missing-dep.yaml
cli/src/: pyproject.toml  requirements.txt
cli/src/devflow/: __init__.py  __main__.py  api.py  executor.py  models.py  parser.py
cli/tests/: test_cli.py
frontend/: .prettierrc  Dockerfile  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Button.tsx  Input.tsx  (+10 more)
(+75 files in other folders)
