[project]
name = "devflow"
version = "0.1.0"
description = "CLI para automatizar workflows de developer"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7"]
[project.scripts]
devflow = "devflow.__main__:cli"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["devflow*"]
